src/objects/Owner_Territory__c.object
<CustomObject>
    <fields>
        <fullName>Owner_Assignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner Assignment</label>
        <referenceTo>Owner_Assignment_Map__c</referenceTo>
        <relationshipName>Owner_Maps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>States__c</fullName>
        <label>States</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NC</fullName>
                </value>
                <value>
                    <fullName>ND</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Territory_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Territory Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Owner_Maps</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Owner Territory</label>
    <nameField>
        <label>Owner Territory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Owner Territories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>